--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </div>
      <button class="toggle-btn" id="toggle">Light Mode</button>
       
-
+<div class="po">
       <div class="content" id="home">
         <h1 class="por">Portfolio</h1>
-      </div>
+      </div></div>
 
       
     </section>
