--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="introvedio">
       <video autoplay muted loop playsinline>
         <source src="./vedios/From2.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Your browser does not support the video tagg.
       </video>
     </div>
 
