make a abou section with details

--- a/index.html
+++ b/index.html
@@ -46,16 +46,74 @@
         <h1 class="por">Portfolio</h1>
       </div></div>
      
+<div class="circlegroup">
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
 
+
+
+</div>
 
 
 
       
     </section>
 <section class="about" id="about">
+<div class="box1">
+  <div class="part1">
+   </div>
+  <div class="div part2">
+  <h2>About Me (SACHIN RAWAT)</h2>
+  <p>
+
+I’m a passionate Web Developer skilled in HTML, CSS, JavaScript, React, Python, Django, and MySQL. I love building clean and responsive web applications. Along with development, I’m also improving my DSA skills using C++, solving problems and strengthening logic. I believe in learning continuously and creating impactful digital solutions.</p>
+ <div class="move"></div>
+  </div>
+  
+</div>
+<div class="box2">
+  
+  <div class="img1"><img src="./images/python.png"></div>
+  <div class="img1"><img src="./images/django.png"></div>
+  <div class="img1"><img src="./images/react.png"></div>
+  <div class="img1"><img src="./images/js.png"></div>
+  
+</div>
+</section>
+<section class="contact" id="contact">
+<div>
+<form action="post">
+<div>
+<label for="text">Full name</label>
+<input type="text" place="Enter you name" required>
+</div>
+<div>
+<label for="text">Enter Email: </label>
+<input type="email" place="Enter you name" required>
+</div>
+<div>
+<label for="text">Type message here</label>
+<input type="text" place="Enter you name" required>
+</div>
+
+</form>
+
+
+</div>
 
 </section>
-
 
     <script src="javascript.js"></script>
   </body>
