chage something that related to style page aswell as index  page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a class="home" href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contactme">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
             <button class="con">Contact</button>
           </ul>
         </div>
@@ -44,6 +44,8 @@
 
 <div class="po"> <div class="content" id="home">
         <h1 class="por">Portfolio</h1>
+        <h2>Sachin Rawat</h2>
+        <p>Web Developer</p>
       </div></div>
      
 <div class="circlegroup">
@@ -92,26 +94,42 @@ I’m a passionate Web Developer skilled in HTML, CSS, JavaScript, React, Python
   
 </div>
 </section>
+<section class="projects" id="projects">
+<h1>My Projects</h1>
+<div class="probig">
+<div class="pro">
+  <div class="card2"></div>
+  <div class="card2"></div></div>
+  <div class="pro2">
+  <div class="card3"></div>
+  <div class="card3"></div></div>
+
+</div>
+<div class="para">
+<p>My projects reflect my passion for frontend design, backend development, and creating digital experiences that truly stand out—combining performance, creativity, and practical problem-solving.</p></div>
+</section>
 <section class="contact" id="contact">
-<div>
+<div class="big">
+<div class="con-box">
 <form action="post">
-<div>
+<h2>Contact Me</h2>
+<div class="info">
 <label for="text">Full name</label>
 <input type="text" place="Enter you name" required>
 </div>
-<div>
+<div class="info">
 <label for="text">Enter Email: </label>
 <input type="email" place="Enter you name" required>
 </div>
-<div>
+<div class="info" >
 <label for="text">Type message here</label>
-<input type="text" place="Enter you name" required>
+<input type="text" place="Enter you name" required id="info3">
 </div>
-
+<div class="info"><button>Send</button></div>
 </form>
 
 
-</div>
+</div></div>
 
 </section>
 
