--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
    </div>
   <div class=" part2">
   <h2 class="h22">About Me (SACHIN RAWAT)</h2>
-  <p>
+  <div><p>
 
-I’m a passionate Web Developer skilled in HTML, CSS, JavaScript, React, Python, Django, and MySQL. I love building clean and responsive web applications. Along with development, I’m also improving my DSA skills using C++, solving problems and strengthening logic. I believe in learning continuously and creating impactful digital solutions.</p>
+I’m a passionate Web Developer skilled in HTML, CSS, JavaScript, React, Python, Django, and MySQL. I love building clean and responsive web applications. Along with development, I’m also improving my DSA skills using C++, solving problems and strengthening logic. I believe in learning continuously and creating impactful digital solutions.</p></div>
  <div class="move"></div>
   </div>
   
@@ -135,17 +135,18 @@ profile management, and secure CRUD operations where users can manage only their
 <h2>Contact Me</h2>
 <div class="info">
 <label for="text">Full name</label>
-<input type="text" place="Enter you name" required>
+<input type="text" place="Enter you name" id="full" required>
 </div>
 <div class="info">
 <label for="text">Enter Email: </label>
-<input type="email" place="Enter you name" required>
+<input type="email" place="Enter you name" id="email" required>
 </div>
 <div class="info" >
 <label for="text">Type message here</label>
 <input type="text" place="Enter you name" required id="info3">
 </div>
-<div class="info"><button>Send</button></div>
+
+<div class="info2"><button>Send</button></div>
 </form>
 
 
