--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <input type="checkbox" id="click">
         <div class="menu">
           <ul>
-            <li><a class="home" href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a for="click" class="home" href="#home">Home</a></li>
+            <li><a for="click" href="#about">About</a></li>
+            <li><a for="click" href="#projects">Projects</a></li>
+            <li><a for="click" href="#contact">Contact</a></li>
             <button class="con">Contact</button>
           </ul>
         </div>
